package patterns.behavioral.command;

import java.math.BigDecimal;

public interface Islem {

    BigDecimal islem(BigDecimal sayi1, BigDecimal sayi2);
}
